tests/snapshot/error/source_locations/syntax/unicode_offsets.exp
TypeError: expected a function
  ┌ source_locations/syntax/unicode_offsets.js:1:16
  |
1 | var foo = "☺"; null();
  |                ^
Stack trace:
  at <global> (source_locations/syntax/unicode_offsets.js:1:16)